--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -83,28 +83,35 @@
 
     <!-- Header End -->
     <% if (catData.length==0){ %>
-      <div class="col-lg-8 table-responsive mb-5 text-center"  style="display: flex; justify-content: center; align-items: center; height: 40vh;">
-        <div>
-            <h5>Hi <span><%=userin %>, </span> Your cart is empty.</h5>
-            <div class="container-fluid">
-              <br>
-                <div class="text-center m-lg-2">
-                    <button
-                        style="margin-right: 0%"
-                        type="button"
-                        class="btn btn-outline-primary"
-                        onclick="location.href='/home'"
-                    >
-                        Continue Shopping
-                    </button>
-                </div>
-            </div>
+    <div
+      class="col-lg-8 table-responsive mb-5 text-center"
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40vh;
+      "
+    >
+      <div>
+        <h5>Hi <span><%=userin %>, </span> Your cart is empty.</h5>
+        <div class="container-fluid">
+          <br />
+          <div class="text-center m-lg-2">
+            <button
+              style="margin-right: 0%"
+              type="button"
+              class="btn btn-outline-primary"
+              onclick="location.href='/home'"
+            >
+              Continue Shopping
+            </button>
+          </div>
         </div>
+      </div>
     </div>
-    
+
     <%}else{%>
 
-     
     <!-- Cart Page Section Begin -->
     <div class="cart-page">
       <form action="/checkout" method="post">
@@ -387,12 +394,12 @@
               //}
             } else {
               // function alert() {
-                Swal.fire({
-                  icon: "error",
-                  title: "Out of Stock...!!!!",
-                  // text: "Out of Stock...!!!!",
-                  // footer: '<a href="#">Why do I have this issue?</a>',
-                });
+              Swal.fire({
+                icon: "error",
+                title: "Out of Stock...!!!!",
+                // text: "Out of Stock...!!!!",
+                // footer: '<a href="#">Why do I have this issue?</a>',
+              });
               // }
               console.log("out of stock!!!!");
               // window.alert("Out Of Stock");
