--- a/views/userView/forgotPassword.ejs
+++ b/views/userView/forgotPassword.ejs
@@ -1,177 +1,200 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Yoga Studio Template">
-    <meta name="keywords" content="Yoga, unica, creative, html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Yoga Studio Template" />
+    <meta name="keywords" content="Yoga, unica, creative, html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FINER THREADS</title>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
-        rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/nice-select.css" type="text/css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
+    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- Page Preloder -->
     <div id="preloder">
-        <div class="loader"></div>
+      <div class="loader"></div>
     </div>
-    
+
     <!-- Search model -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
-		</div>
-	</div>
-	<!-- Search model end -->
+    <div class="search-model">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+        <div class="search-close-switch">+</div>
+        <form class="search-model-form">
+          <input type="text" id="search-input" placeholder="Search here....." />
+        </form>
+      </div>
+    </div>
+    <!-- Search model end -->
 
     <!-- Header Section Begin -->
     <header class="header-section">
-        <div class="container-fluid">
-            <div class="inner-header">
-                <div class="logo">
-                    <a href="/"><img src="img/logo.png" alt=""></a>
-                </div>
-            </div>
+      <div class="container-fluid">
+        <div class="inner-header">
+          <div class="logo">
+            <a href="/"><img src="img/logo.png" alt="" /></a>
+          </div>
         </div>
+      </div>
     </header>
 
-
     <body>
-        <!-- Topbar Start -->
-        <div class="container">
-
-        <h5 style="padding-left:40%">Please enter your email to confirm</h5>
+      <!-- Topbar Start -->
+      <div class="container">
+        <h5 style="padding-left: 40%">Please enter your email to confirm</h5>
         <div class="w-25" style="margin-left: 40%">
-        
-        
-        <p></p>
+          <p></p>
           <form action="/authEmail" method="post">
             <!-- OTP input -->
             <div class="form-outline mb-4">
-            <label class="form-label" for="form2Example1">Email address<sup style="color: red;">*</sup></label>
+              <label class="form-label" for="form2Example1"
+                >Email address<sup style="color: red">*</sup></label
+              >
               <input
                 type="email"
                 id="email"
                 class="form-control"
-                name="email" placeholder="Enter your email address"
-             onkeyup="validEmail()"
+                name="email"
+                placeholder="Enter your email address"
+                onkeyup="validEmail()"
               />
               <span id="validEmailError"></span>
-    
             </div>
             <span id="submitError"></span>
-            <br>
+            <br />
             <%if(error){%>
-              <p id="regEmail" style="color: red; text-align: center;"><%=error %></p>
+            <p id="regEmail" style="color: red; text-align: center">
+              <%=error %>
+            </p>
             <%}%>
-            
+
             <!-- Submit button -->
-            <button onclick="return validateForm()" type="submit" class="btn btn-primary btn-block mb-4">
+            <button
+              onclick="return validateForm()"
+              type="submit"
+              class="btn btn-primary btn-block mb-4"
+            >
               Continue
             </button>
-             <br>
-    
+            <br />
           </form>
-          <div>
+          <div></div>
+        </div>
+      </div>
+    </body>
+
+    <!-- Footer Section Begin -->
+    <footer class="footer-section spad">
+      <div class="container">
+        <div class="footer-widget">
+          <div class="row">
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>About us</h4>
+                <ul>
+                  <li>About Us</li>
+                  <li>Community</li>
+                  <li>Jobs</li>
+                  <li>Shipping</li>
+                  <li>Contact Us</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>Customer Care</h4>
+                <ul>
+                  <li>Search</li>
+                  <li>Privacy Policy</li>
+                  <li>2019 Lookbook</li>
+                  <li>Shipping & Delivery</li>
+                  <li>Gallery</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>Our Services</h4>
+                <ul>
+                  <li>Free Shipping</li>
+                  <li>Free Returnes</li>
+                  <li>Our Franchising</li>
+                  <li>Terms and conditions</li>
+                  <li>Privacy Policy</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>Information</h4>
+                <ul>
+                  <li>Payment methods</li>
+                  <li>Times and shipping costs</li>
+                  <li>Product Returns</li>
+                  <li>Shipping methods</li>
+                  <li>Conformity of the products</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="social-links-warp">
+        <div class="container">
+          <div class="social-links">
+            <a href="" class="instagram"
+              ><i class="fa fa-instagram"></i><span>instagram</span></a
+            >
+            <a href="" class="pinterest"
+              ><i class="fa fa-pinterest"></i><span>pinterest</span></a
+            >
+            <a href="" class="facebook"
+              ><i class="fa fa-facebook"></i><span>facebook</span></a
+            >
+            <a href="" class="twitter"
+              ><i class="fa fa-twitter"></i><span>twitter</span></a
+            >
+            <a href="" class="youtube"
+              ><i class="fa fa-youtube"></i><span>youtube</span></a
+            >
+            <a href="" class="tumblr"
+              ><i class="fa fa-tumblr-square"></i><span>tumblr</span></a
+            >
           </div>
         </div>
 
+        <div class="container text-center pt-5">
+          <p>
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            Finer Therads
+          </p>
         </div>
-        </body>
-
-        
-      <!-- Footer Section Begin -->
-      <footer class="footer-section spad">
-        <div class="container">
-            <div class="footer-widget">
-                <div class="row">
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h4>About us</h4>
-                            <ul>
-                                <li>About Us</li>
-                                <li>Community</li>
-                                <li>Jobs</li>
-                                <li>Shipping</li>
-                                <li>Contact Us</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h4>Customer Care</h4>
-                            <ul>
-                                <li>Search</li>
-                                <li>Privacy Policy</li>
-                                <li>2019 Lookbook</li>
-                                <li>Shipping & Delivery</li>
-                                <li>Gallery</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h4>Our Services</h4>
-                            <ul>
-                                <li>Free Shipping</li>
-                                <li>Free Returnes</li>
-                                <li>Our Franchising</li>
-                                <li>Terms and conditions</li>
-                                <li>Privacy Policy</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h4>Information</h4>
-                            <ul>
-                                <li>Payment methods</li>
-                                <li>Times and shipping costs</li>
-                                <li>Product Returns</li>
-                                <li>Shipping methods</li>
-                                <li>Conformity of the products</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="social-links-warp">
-			<div class="container">
-				<div class="social-links">
-					<a href="" class="instagram"><i class="fa fa-instagram"></i><span>instagram</span></a>
-					<a href="" class="pinterest"><i class="fa fa-pinterest"></i><span>pinterest</span></a>
-					<a href="" class="facebook"><i class="fa fa-facebook"></i><span>facebook</span></a>
-					<a href="" class="twitter"><i class="fa fa-twitter"></i><span>twitter</span></a>
-					<a href="" class="youtube"><i class="fa fa-youtube"></i><span>youtube</span></a>
-					<a href="" class="tumblr"><i class="fa fa-tumblr-square"></i><span>tumblr</span></a>
-				</div>
-			</div>
-
-<div class="container text-center pt-5">
-                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Finer Therads</p>
-            </div>
-
-
-		</div>
+      </div>
     </footer>
     <!-- Footer Section End -->
 
@@ -186,78 +209,72 @@
     <script src="js/main.js"></script>
 
     <script>
-         setTimeout(()=>{
-              const fade=document.getElementById('errMsg');
-              fade.style.display='none'
-            },3000)
+      setTimeout(() => {
+        const fade = document.getElementById("errMsg");
+        fade.style.display = "none";
+      }, 3000);
 
-
-            setTimeout(()=>{
-            const fade1=document.getElementById("successID");
-            fade1.style.display='none'
-            },5000)
+      setTimeout(() => {
+        const fade1 = document.getElementById("successID");
+        fade1.style.display = "none";
+      }, 5000);
     </script>
-        <script>
+    <script>
+      const togglePassword = document.querySelector("#togglePassword");
 
-            const togglePassword = document.querySelector('#togglePassword');
-    
-            const password = document.querySelector('#id_password');
-    
-            togglePassword.addEventListener('click', function (e) {
-                // toggle the type attribute
-                const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
-                password.setAttribute('type', type);
-                // toggle the eye slash icon
-                this.classList.toggle('fa-eye-slash');
-                
-            });
+      const password = document.querySelector("#id_password");
 
+      togglePassword.addEventListener("click", function (e) {
+        // toggle the type attribute
+        const type =
+          password.getAttribute("type") === "password" ? "text" : "password";
+        password.setAttribute("type", type);
+        // toggle the eye slash icon
+        this.classList.toggle("fa-eye-slash");
+      });
 
+      /*    EMAIL VALIDATION     */
+      var emailError = document.getElementById("validEmailError");
+      var submitError = document.getElementById("");
+      var invalidEmail = document.getElementById("regEmail");
+      invalidEmail.style.display = "block";
+      setTimeout(() => {
+        invalidEmail.style.display = "none";
+      }, 2000);
 
+      function validEmail() {
+        var email = document.getElementById("email").value;
+        if (email.length === 0) {
+          emailError.style.color = "red";
+          emailError.innerHTML = "Email is required";
+          return false;
+        } else if (
+          !email.match(/^[A-Za-z\._\-[0-9]*[@][A-Za-z]*[\.][a-z]{2,4}$/)
+        ) {
+          emailError.style.color = "red";
+          emailError.innerHTML = "Proper email format is required";
+          return false;
+        }
+        emailError.innerHTML = "valid";
 
-             /*    EMAIL VALIDATION     */
-    var emailError = document.getElementById("validEmailError");
-    var submitError = document.getElementById("")
-    var invalidEmail = document.getElementById("regEmail");
-        invalidEmail.style.display='block';
-        setTimeout(()=>{
-          invalidEmail.style.display="none"
-        },2000)
-  
-    function validEmail() {
-      var email = document.getElementById("email").value;
-      if (email.length === 0) {
-        emailError.style.color='red';
-        emailError.innerHTML = "Email is required";
-        return false;
-        } 
-        else if (!email.match(/^[A-Za-z\._\-[0-9]*[@][A-Za-z]*[\.][a-z]{2,4}$/)) {
-          emailError.style.color='red';
-        emailError.innerHTML = "Proper email format is required";
-        return false;
+        if (emailError.innerHTML == "valid") {
+          emailError.style.color = "green";
+        } else {
+          emailError.style.color = "red";
+        }
+        return true;
       }
-      emailError.innerHTML = "valid";
-      
-      if ((emailError.innerHTML == "valid")) {
-    emailError.style.color = "green";
-  }else {
-    emailError.style.color = "red";
-  }
-      return true;
-    }
 
-    function validateForm() {
-  if (!validEmail() ) {
-    submitError.style.display = "block";
-    submitError.innerHTML = "Please enter valid email address";
-    setTimeout(() => {
-      submitError.style.display = "none";
-    }, 2000);
-    return false;
-  }
-}
-
-            </script>    
-</body>
-
+      function validateForm() {
+        if (!validEmail()) {
+          submitError.style.display = "block";
+          submitError.innerHTML = "Please enter valid email address";
+          setTimeout(() => {
+            submitError.style.display = "none";
+          }, 2000);
+          return false;
+        }
+      }
+    </script>
+  </body>
 </html>
