--- a/views/adminView/adminCoupon.ejs
+++ b/views/adminView/adminCoupon.ejs
@@ -1,165 +1,277 @@
 <%- include ('adminHeader') %>
 
-
 <div class="page-content">
-    <!-- Page Header-->
-    <div class="page-header no-margin-bottom">
-        <div class="container-fluid">
-            <h2 class="h5 no-margin-bottom">Coupon</h2>
-        </div>
+  <!-- Page Header-->
+  <div class="page-header no-margin-bottom">
+    <div class="container-fluid">
+      <h2 class="h5 no-margin-bottom">Coupon</h2>
     </div>
+  </div>
 
-    <div class="container-fluid" style="margin-left: 50px;margin-top:50px">
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Add Coupon
-        </button>
+  <div class="container-fluid" style="margin-left: 50px; margin-top: 50px">
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      Add Coupon
+    </button>
 
-        <!-- Modal -->
-        <form action="/admin/coupon" method="post">
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Enter the Coupon</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <label class="required" for="">Coupon Code </label>
-                            <input type="text" placeholder="Enter the name" id="adcoupon" name="coupon" onkeydown="if(arguments[0].code === 'Space' && document.getElementById('adcoupon').value.length === 0) { return false; }" class="form-control"
-                                required>
-                            <label class="required" for="">Expiry </label>
-                            <input type="date" placeholder="enter the expiry date" name="expiry" id="expiryDate"
-                                class="form-control" required>
-                            <label class="required" for="">Discount Amount </label>
-                            <input type="number" placeholder="Enter the name" name="discount"  class="form-control"
-                                required min="1">
-                            <label class="required" for="">Minimum Amount </label>
-                            <input type="number" placeholder="Enter the name" name="minAmount" class="form-control"
-                                required min="1">
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Add</button>
-                        </div>
-                    </div>
-                </div>
+    <!-- Modal -->
+    <form action="/admin/coupon" method="post">
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">
+                Enter the Coupon
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
             </div>
-        </form>
-    </div>
-    <br>
-    <h5 id="categoryFound" style="color: rgb(227, 59, 59); margin-left: 50px;"><%=couponFound %></h5>
-
-    <p><%= this.name %></p>
-
-    <div class="container mt-5 p-5">
-        <div class="row">
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col">Coupon</th>
-                        <th>Expiry</th>
-                        <th>Discount Amount</th>
-                        <th>Minimum Amount</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <% couponData.forEach(function(coupon, index) { %>
-                <tbody>
-                    <tr>
-                        <td><%= coupon.name %></td>
-                        <td><%= coupon.expiry.toLocaleDateString() %></td>
-                        <td><%= coupon.discount %></td>
-                        <td><%= coupon.minimumAmount %></td>
-                        <td>
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal<%= index %>">
-                                Edit
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal<%= index %>" tabindex="-1"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <form action="/admin/editCoupon?name=<%= coupon.name %>" method="post">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Coupon</h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <label class="form-control-label">Edit Coupon</label>
-                                                <input type="text" id="editcoupon" value="<%= coupon.name %>" onkeydown="if(arguments[0].code === 'Space' && document.getElementById('editcoupon').value.length === 0) { return false; }" class="form-control"
-                                                    name="coupon">
-                                                <input type="text" value="<%= coupon.name %>" class="form-control"
-                                                    name="oldcoupon" hidden>
-                                                <label class="required" class="form-control-label">Expiry Date</label>
-                                                <input value="<%=coupon.expiry.toLocaleDateString()%>" class="form-control"
-                                                    disabled>
-                                                <input type="date" id="editexpiryDate" value="<%= coupon.expiry %>"
-                                                    class="form-control" name="expiry" required>
-                                                <label class="form-control-label">Discount Amount</label>
-                                                <input type="number" value="<%= coupon.discount %>" class="form-control"
-                                                    name="discount" required min="1">
-                                                <label class="form-control-label">Minimum Amount</label>
-                                                <input type="number" value="<%= coupon.minimumAmount %>"
-                                                    class="form-control" name="minAmount" min="1" required>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Close</button>
-                                                <button type="submit" class="btn btn-primary">Save changes</button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </td>
-                        <td><a href="/admin/removeCoupon?name=<%= coupon.name %>" class="btn btn-primary"
-                                onclick="return confirm(' Are you sure, You want to delete the Coupon')">Remove</a>
-                        </td>
-                    </tr>
-                </tbody>
-                <% }) %>
-            </table>
+            <div class="modal-body">
+              <label class="required" for="">Coupon Code </label>
+              <input
+                type="text"
+                placeholder="Enter the name"
+                id="adcoupon"
+                name="coupon"
+                onkeydown="if(arguments[0].code === 'Space' && document.getElementById('adcoupon').value.length === 0) { return false; }"
+                class="form-control"
+                required
+              />
+              <label class="required" for="">Expiry </label>
+              <input
+                type="date"
+                placeholder="enter the expiry date"
+                name="expiry"
+                id="expiryDate"
+                class="form-control"
+                required
+              />
+              <label class="required" for="">Discount Amount </label>
+              <input
+                type="number"
+                placeholder="Enter the name"
+                name="discount"
+                class="form-control"
+                required
+                min="1"
+              />
+              <label class="required" for="">Minimum Amount </label>
+              <input
+                type="number"
+                placeholder="Enter the name"
+                name="minAmount"
+                class="form-control"
+                required
+                min="1"
+              />
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="submit" class="btn btn-primary">Add</button>
+            </div>
+          </div>
         </div>
+      </div>
+    </form>
+  </div>
+  <br />
+  <h5 id="categoryFound" style="color: rgb(227, 59, 59); margin-left: 50px">
+    <%=couponFound %>
+  </h5>
+
+  <p><%= this.name %></p>
+
+  <div class="container mt-5 p-5">
+    <div class="row">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Coupon</th>
+            <th>Expiry</th>
+            <th>Discount Amount</th>
+            <th>Minimum Amount</th>
+            <th>Edit</th>
+            <th>Delete</th>
+          </tr>
+        </thead>
+        <% couponData.forEach(function(coupon, index) { %>
+        <tbody>
+          <tr>
+            <td><%= coupon.name %></td>
+            <td><%= coupon.expiry.toLocaleDateString() %></td>
+            <td><%= coupon.discount %></td>
+            <td><%= coupon.minimumAmount %></td>
+            <td>
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal<%= index %>"
+              >
+                Edit
+              </button>
+
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="exampleModal<%= index %>"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <form
+                    action="/admin/editCoupon?name=<%= coupon.name %>"
+                    method="post"
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">
+                          Edit Coupon
+                        </h1>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
+                      </div>
+                      <div class="modal-body">
+                        <label class="form-control-label">Edit Coupon</label>
+                        <input
+                          type="text"
+                          id="editcoupon"
+                          value="<%= coupon.name %>"
+                          onkeydown="if(arguments[0].code === 'Space' && document.getElementById('editcoupon').value.length === 0) { return false; }"
+                          class="form-control"
+                          name="coupon"
+                        />
+                        <input
+                          type="text"
+                          value="<%= coupon.name %>"
+                          class="form-control"
+                          name="oldcoupon"
+                          hidden
+                        />
+                        <label class="required" class="form-control-label"
+                          >Expiry Date</label
+                        >
+                        <input
+                          value="<%=coupon.expiry.toLocaleDateString()%>"
+                          class="form-control"
+                          disabled
+                        />
+                        <input
+                          type="date"
+                          id="editexpiryDate"
+                          value="<%= coupon.expiry %>"
+                          class="form-control"
+                          name="expiry"
+                          required
+                        />
+                        <label class="form-control-label"
+                          >Discount Amount</label
+                        >
+                        <input
+                          type="number"
+                          value="<%= coupon.discount %>"
+                          class="form-control"
+                          name="discount"
+                          required
+                          min="1"
+                        />
+                        <label class="form-control-label">Minimum Amount</label>
+                        <input
+                          type="number"
+                          value="<%= coupon.minimumAmount %>"
+                          class="form-control"
+                          name="minAmount"
+                          min="1"
+                          required
+                        />
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                          Save changes
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </td>
+            <td>
+              <a
+                href="/admin/removeCoupon?name=<%= coupon.name %>"
+                class="btn btn-primary"
+                onclick="return confirm(' Are you sure, You want to delete the Coupon')"
+                >Remove</a
+              >
+            </td>
+          </tr>
+        </tbody>
+        <% }) %>
+      </table>
     </div>
+  </div>
 </div>
 
-    <script>
-        // Get the input element
-        var expiryInput = document.getElementById("expiryDate");
-    
-        // Get today's date in YYYY-MM-DD format
-        var today = new Date().toISOString().split('T')[0];
-    
-        // Set the minimum date for the input field to today
-        expiryInput.min = today;
-    </script>
-
 <script>
-    // Get the input element
-    var expiryInput = document.getElementById("editexpiryDate");
+  // Get the input element
+  var expiryInput = document.getElementById("expiryDate");
 
-    // Get today's date in YYYY-MM-DD format
-    var today = new Date().toISOString().split('T')[0];
+  // Get today's date in YYYY-MM-DD format
+  var today = new Date().toISOString().split("T")[0];
 
-    // Set the minimum date for the input field to today
-    expiryInput.min = today;
+  // Set the minimum date for the input field to today
+  expiryInput.min = today;
 </script>
 
-    <script>
-        const value = document.getElementById('categoryFound')
-        setTimeout(() => {
-          value.style.display = " none"
-        }, 3000)
-        
-      </script>
+<script>
+  // Get the input element
+  var expiryInput = document.getElementById("editexpiryDate");
 
+  // Get today's date in YYYY-MM-DD format
+  var today = new Date().toISOString().split("T")[0];
+
+  // Set the minimum date for the input field to today
+  expiryInput.min = today;
+</script>
+
+<script>
+  const value = document.getElementById("categoryFound");
+  setTimeout(() => {
+    value.style.display = " none";
+  }, 3000);
+</script>
 
 <%- include ('adminFooter') %>
