--- a/views/adminView/admin_order_details.ejs
+++ b/views/adminView/admin_order_details.ejs
@@ -1,75 +1,79 @@
-
 <%- include ('adminHeader') %>
 
 <section class="content-main">
-
-
-
-    <div class="page-content">
-        <!-- Page Header-->
-        <div class="page-header no-margin-bottom">
-            <div class="container-fluid">
-                <h2 class="h5 no-margin-bottom">Order Details</h2>
-            </div>
-        </div>
-    
-        <div class="container mt-5 p-5">
-            <div class="row">
-                <div class="container mt-5">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="<%= data.img %>" alt="image" style="height: 50%;">
-                        </div>
-                        <div>
-                            <h2><%= data.product %></h2>
-                            <br>
-                            <p>OrderId : <%= data.orderId %></p>
-                            <p>Usernane : <%= data.username %></p>
-                            <p>Quantity: <%= data.quentity %></p>
-                            <p>Price : <%= data.price %></p>
-                            <p>Address : <%= data.address.houseName %>, <%= data.address.city %>, <%= data.address.state %>,
-                                <%= data.address.country %></p>
-                            <p>Pin Code: <%= data.address.pincode %></p>
-                            <p>Payment Type : <%= data.paymentMentod %></p>
-    
-                            <% if (data.status === 'CANCELED' || data.status === "Payment Failed" ) { %>
-                                <p style="color: red;">Status : <%= data.status %></p>
-                            <% } else if (data.status === 'Delivered Successfully') { %>
-                                <% if (data.returnStatus) { %>
-                                    <% if (data.returnStatus === 2) { %>
-                                        <p style="color: red;">Return request rejected</p>
-                                    <% } else { %>
-                                        <p style="color: green;">Returned Successfully</p>
-                                    <% } %>
-                                <% } else if (data.returnreason) { %>
-                                    <% if (!data.returnStatus) { %>
-                                        <p style="color: aquamarine;">Return reason : <%= data.returnreason %></p>
-                                        <a href="/admin/returnFail?id=<%= data.orderId %>&product=<%= data.product %>"
-                                            class="btn btn-sm btn-danger" onclick="return confirm('Do you want to reject the return?')">Reject</a>
-                                        <a href="/admin/returnsuccess?id=<%= data.orderId %>&product=<%= data.product %>"
-                                            class="btn btn-sm btn-success" onclick="return confirm('Do you want to accept the return?')">Accepte</a>
-                                    <% } %>
-                                <% } else { %>
-                                    <p style="color: green;">Status : <%= data.status %></p>
-                                <% } %>
-                            <% } else { %>
-                                <p>Status : <%= data.status %></p>
-                                Cancel : <a href="/admin/deleteOrder?orderId=<%= data.orderId %>&product=<%= data.product %>"
-                                    class="btn btn-sm btn-danger" onclick="return confirm('Do you want to cancel the order?')">Cancel</a>
-                            <% } %>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="page-content">
+    <!-- Page Header-->
+    <div class="page-header no-margin-bottom">
+      <div class="container-fluid">
+        <h2 class="h5 no-margin-bottom">Order Details</h2>
+      </div>
     </div>
-    
-    
 
+    <div class="container mt-5 p-5">
+      <div class="row">
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="<%= data.img %>" alt="image" style="height: 50%" />
+            </div>
+            <div>
+              <h2><%= data.product %></h2>
+              <br />
+              <p>OrderId : <%= data.orderId %></p>
+              <p>Usernane : <%= data.username %></p>
+              <p>Quantity: <%= data.quentity %></p>
+              <p>Price : <%= data.price %></p>
+              <p>
+                Address : <%= data.address.houseName %>, <%= data.address.city
+                %>, <%= data.address.state %>, <%= data.address.country %>
+              </p>
+              <p>Pin Code: <%= data.address.pincode %></p>
+              <p>Payment Type : <%= data.paymentMentod %></p>
 
-
-
-</section> <!-- content-main end// -->
-
+              <% if (data.status === 'CANCELED' || data.status === "Payment
+              Failed" ) { %>
+              <p style="color: red">Status : <%= data.status %></p>
+              <% } else if (data.status === 'Delivered Successfully') { %> <% if
+              (data.returnStatus) { %> <% if (data.returnStatus === 2) { %>
+              <p style="color: red">Return request rejected</p>
+              <% } else { %>
+              <p style="color: green">Returned Successfully</p>
+              <% } %> <% } else if (data.returnreason) { %> <% if
+              (!data.returnStatus) { %>
+              <p style="color: aquamarine">
+                Return reason : <%= data.returnreason %>
+              </p>
+              <a
+                href="/admin/returnFail?id=<%= data.orderId %>&product=<%= data.product %>"
+                class="btn btn-sm btn-danger"
+                onclick="return confirm('Do you want to reject the return?')"
+                >Reject</a
+              >
+              <a
+                href="/admin/returnsuccess?id=<%= data.orderId %>&product=<%= data.product %>"
+                class="btn btn-sm btn-success"
+                onclick="return confirm('Do you want to accept the return?')"
+                >Accepte</a
+              >
+              <% } %> <% } else { %>
+              <p style="color: green">Status : <%= data.status %></p>
+              <% } %> <% } else { %>
+              <p>Status : <%= data.status %></p>
+              Cancel :
+              <a
+                href="/admin/deleteOrder?orderId=<%= data.orderId %>&product=<%= data.product %>"
+                class="btn btn-sm btn-danger"
+                onclick="return confirm('Do you want to cancel the order?')"
+                >Cancel</a
+              >
+              <% } %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- content-main end// -->
 
 <%- include ('adminFooter') %>
