--- a/views/userView/index.ejs
+++ b/views/userView/index.ejs
@@ -250,11 +250,13 @@
               <div class="product-text">
                 <h6><%=p.name %></h6>
                 <% if (p.offer) { %>
-                  <span class="price"><del>₹ <%= p.rate %></del>
-                    <h5>₹ <%= p.discountAmount %></h5></span>
-                  <% } else { %>
-                    <span class="price">₹ <%= p.rate %></span>
-                    <% } %>
+                <span class="price"
+                  ><del>₹ <%= p.rate %></del>
+                  <h5>₹ <%= p.discountAmount %></h5></span
+                >
+                <% } else { %>
+                <span class="price">₹ <%= p.rate %></span>
+                <% } %>
               </div>
             </div>
           </div>
