--- a/views/userView/productPage.ejs
+++ b/views/userView/productPage.ejs
@@ -105,7 +105,7 @@
           background-size: 800px 800px;
           background-repeat: no-repeat;
         }
-    </style>
+      </style>
     </header>
 
     <!-- Header End -->
@@ -168,7 +168,6 @@
                   <div class="magnifier"></div>
                 </figure>
               </div>
-              
             </div>
           </div>
           <div class="col-lg-6">
@@ -363,24 +362,31 @@
           });
 
           function getCursorPos(e, img) {
-            var a, x = 0, y = 0;
+            var a,
+              x = 0,
+              y = 0;
             e = e || window.event;
             a = img.getBoundingClientRect();
             x = e.pageX - a.left;
             y = e.pageY - a.top;
             x = x - window.pageXOffset;
             y = y - window.pageYOffset;
-            return {x : x, y : y};
+            return { x: x, y: y };
           }
 
           function magnify(e, pos) {
             var x, y;
-            x = pos.x - (magnifierWidth / 2);
-            y = pos.y - (magnifierHeight / 2);
+            x = pos.x - magnifierWidth / 2;
+            y = pos.y - magnifierHeight / 2;
             magnifier.style.left = x + "px";
             magnifier.style.top = y + "px";
             magnifier.style.backgroundImage = "url('" + img.src + "')";
-            magnifier.style.backgroundPosition = "-" + (pos.x * ratio - magnifierWidth / 2) + "px -" + (pos.y * ratio - magnifierHeight / 2) + "px";
+            magnifier.style.backgroundPosition =
+              "-" +
+              (pos.x * ratio - magnifierWidth / 2) +
+              "px -" +
+              (pos.y * ratio - magnifierHeight / 2) +
+              "px";
           }
 
           img.addEventListener("mouseenter", function () {
@@ -392,7 +398,6 @@
           });
         });
       });
-  </script>
-
+    </script>
   </body>
 </html>
