--- a/views/userView/rPayFail.ejs
+++ b/views/userView/rPayFail.ejs
@@ -1,275 +1,287 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Yoga Studio Template">
-    <meta name="keywords" content="Yoga, unica, creative, html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Yoga Studio Template" />
+    <meta name="keywords" content="Yoga, unica, creative, html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FINER THREADS</title>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
-        rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="/css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="/css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="/css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    
-</head>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/nice-select.css" type="text/css" />
+    <link rel="stylesheet" href="/css/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
+    <link rel="stylesheet" href="/css/slicknav.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+  </head>
 
-
-<body>
+  <body>
     <!-- Page Preloder -->
     <div id="preloder">
-        <div class="loader"></div>
+      <div class="loader"></div>
     </div>
-    
+
     <!-- Search model -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
-		</div>
-	</div>
-	<!-- Search model end -->
+    <div class="search-model">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+        <div class="search-close-switch">+</div>
+        <form class="search-model-form">
+          <input type="text" id="search-input" placeholder="Search here....." />
+        </form>
+      </div>
+    </div>
+    <!-- Search model end -->
 
     <!-- Header Section Begin -->
     <header class="header-section">
-        <div class="container-fluid">
-            <div class="inner-header">
-                <div class="logo">
-                    <a href="/"><img src="img/logo.png" alt=""></a>
-                </div>
-            </div>
+      <div class="container-fluid">
+        <div class="inner-header">
+          <div class="logo">
+            <a href="/"><img src="img/logo.png" alt="" /></a>
+          </div>
         </div>
+      </div>
     </header>
- 
- 
- 
- 
-<section id="sec1" class="vh-50 p-3" style="background-color: rgb(255, 255, 255)">
-    <div class="mask d-flex align-items-center h-50 gradient-custom-3">
-      <div class="container h-100">
-        <div
-          class="row d-flex justify-content-center align-items-center h-100"
-        >
-          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-            <div class="card" style="border-radius: 15px">
-              <div class="card-body p-5">
-                <h2 class="text-uppercase text-center mb-5">
-                  Transaction Failed
-                </h2>
 
-                <p>Order Id: <%=id %></p>
-                <p>Order Date: <%=date.toLocaleString() %></p>
-                <p>Transaction failed due to some internal error.</p>
-                <div class="d-flex justify-content-center">
-                  <button
-                    id="repayment-button"
-                    onclick="retry_Payment(`<%=id %>-<%=amount%>`)"
-                    class="m-2 mb-0 mt-4 btn btn-danger"
-                  >
-                    Retry Payment
-                  </button>
-                  <!-- <button
+    <section
+      id="sec1"
+      class="vh-50 p-3"
+      style="background-color: rgb(255, 255, 255)"
+    >
+      <div class="mask d-flex align-items-center h-50 gradient-custom-3">
+        <div class="container h-100">
+          <div
+            class="row d-flex justify-content-center align-items-center h-100"
+          >
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+              <div class="card" style="border-radius: 15px">
+                <div class="card-body p-5">
+                  <h2 class="text-uppercase text-center mb-5">
+                    Transaction Failed
+                  </h2>
+
+                  <p>Order Id: <%=id %></p>
+                  <p>Order Date: <%=date.toLocaleString() %></p>
+                  <p>Transaction failed due to some internal error.</p>
+                  <div class="d-flex justify-content-center">
+                    <button
+                      id="repayment-button"
+                      onclick="retry_Payment(`<%=id %>-<%=amount%>`)"
+                      class="m-2 mb-0 mt-4 btn btn-danger"
+                    >
+                      Retry Payment
+                    </button>
+                    <!-- <button
                     onclick="discard(`<%=id %>`)"
                     class="m-2 mb-0 mt-4 btn btn-danger"
                   >
                     Discard
                   </button> -->
-                  <!-- {{/if}} -->
-                </div>
-                <p style="font-size: 9px; padding-left: px">
-                  <sup>*</sup>
-                  Hit the discard button to cancel order and revert changes
-                </p>
-                <div class="d-flex justify-content-center m-2">
-                  <button
-                    onclick="location.href='/orderhistory'"
-                    type="submit"
-                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
-                  >
-                    Goto Order History
-                  </button>
+                    <!-- {{/if}} -->
+                  </div>
+                  <p style="font-size: 9px; padding-left: px">
+                    <sup>*</sup>
+                    Hit the discard button to cancel order and revert changes
+                  </p>
+                  <div class="d-flex justify-content-center m-2">
+                    <button
+                      onclick="location.href='/orderhistory'"
+                      type="submit"
+                      class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                    >
+                      Goto Order History
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
- 
- 
- 
- 
- 
- 
- 
- <!-- Footer Section Begin -->
-  <footer class="footer-section spad">
-    <div class="container">
+    </section>
+
+    <!-- Footer Section Begin -->
+    <footer class="footer-section spad">
+      <div class="container">
         <div class="footer-widget">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h4>About us</h4>
-                        <ul>
-                            <li>About Us</li>
-                            <li>Community</li>
-                            <li>Jobs</li>
-                            <li>Shipping</li>
-                            <li>Contact Us</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h4>Customer Care</h4>
-                        <ul>
-                            <li>Search</li>
-                            <li>Privacy Policy</li>
-                            <li>2019 Lookbook</li>
-                            <li>Shipping & Delivery</li>
-                            <li>Gallery</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h4>Our Services</h4>
-                        <ul>
-                            <li>Free Shipping</li>
-                            <li>Free Returnes</li>
-                            <li>Our Franchising</li>
-                            <li>Terms and conditions</li>
-                            <li>Privacy Policy</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h4>Information</h4>
-                        <ul>
-                            <li>Payment methods</li>
-                            <li>Times and shipping costs</li>
-                            <li>Product Returns</li>
-                            <li>Shipping methods</li>
-                            <li>Conformity of the products</li>
-                        </ul>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>About us</h4>
+                <ul>
+                  <li>About Us</li>
+                  <li>Community</li>
+                  <li>Jobs</li>
+                  <li>Shipping</li>
+                  <li>Contact Us</li>
+                </ul>
+              </div>
             </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>Customer Care</h4>
+                <ul>
+                  <li>Search</li>
+                  <li>Privacy Policy</li>
+                  <li>2019 Lookbook</li>
+                  <li>Shipping & Delivery</li>
+                  <li>Gallery</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>Our Services</h4>
+                <ul>
+                  <li>Free Shipping</li>
+                  <li>Free Returnes</li>
+                  <li>Our Franchising</li>
+                  <li>Terms and conditions</li>
+                  <li>Privacy Policy</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="single-footer-widget">
+                <h4>Information</h4>
+                <ul>
+                  <li>Payment methods</li>
+                  <li>Times and shipping costs</li>
+                  <li>Product Returns</li>
+                  <li>Shipping methods</li>
+                  <li>Conformity of the products</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
-    <div class="social-links-warp">
+      </div>
+      <div class="social-links-warp">
         <div class="container">
-            <div class="social-links">
-                <a href="" class="instagram"><i class="fa fa-instagram"></i><span>instagram</span></a>
-                <a href="" class="pinterest"><i class="fa fa-pinterest"></i><span>pinterest</span></a>
-                <a href="" class="facebook"><i class="fa fa-facebook"></i><span>facebook</span></a>
-                <a href="" class="twitter"><i class="fa fa-twitter"></i><span>twitter</span></a>
-                <a href="" class="youtube"><i class="fa fa-youtube"></i><span>youtube</span></a>
-                <a href="" class="tumblr"><i class="fa fa-tumblr-square"></i><span>tumblr</span></a>
-            </div>
+          <div class="social-links">
+            <a href="" class="instagram"
+              ><i class="fa fa-instagram"></i><span>instagram</span></a
+            >
+            <a href="" class="pinterest"
+              ><i class="fa fa-pinterest"></i><span>pinterest</span></a
+            >
+            <a href="" class="facebook"
+              ><i class="fa fa-facebook"></i><span>facebook</span></a
+            >
+            <a href="" class="twitter"
+              ><i class="fa fa-twitter"></i><span>twitter</span></a
+            >
+            <a href="" class="youtube"
+              ><i class="fa fa-youtube"></i><span>youtube</span></a
+            >
+            <a href="" class="tumblr"
+              ><i class="fa fa-tumblr-square"></i><span>tumblr</span></a
+            >
+          </div>
         </div>
 
-<div class="container text-center pt-5">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Finer Therads</p>
+        <div class="container text-center pt-5">
+          <p>
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            Finer Therads
+          </p>
         </div>
+      </div>
+    </footer>
+    <!-- Footer Section End -->
 
+    <!-- Js Plugins -->
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.magnific-popup.min.js"></script>
+    <script src="/js/jquery.slicknav.js"></script>
+    <script src="/js/owl.carousel.min.js"></script>
+    <script src="/js/jquery.nice-select.min.js"></script>
+    <script src="/js/mixitup.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-    </div>
-</footer>
-<!-- Footer Section End -->
-
-<!-- Js Plugins -->
-<script src="/js/jquery-3.3.1.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery.magnific-popup.min.js"></script>
-<script src="/js/jquery.slicknav.js"></script>
-<script src="/js/owl.carousel.min.js"></script>
-<script src="/js/jquery.nice-select.min.js"></script>
-<script src="/js/mixitup.min.js"></script>
-<script src="/js/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
-
-<script>
-  function retry_Payment(id) {
-    console.log("RAZORPAY PAYMENT INVOKED AGAIN");
-    console.log("Order ID is ", id);
-    $.ajax({
-      url: "/reRazorpay",
-      type: "POST",
-      data: { id: id },
-      success: function (res) {
-        if (res.success) {
-          var options = {
-            key: "" + res.key_id + "",
-            amount: "" + res.amount + "",
-            currency: "INR",
-            name: "getantiques",
-            order_id: "" + res.order_id + "",
-            handler: function (response) {
-              console.log("order id is: ", id);
-              window.open(`/orderPlaced?statuss=success`, "_self");
-            },
-            theme: {
-              color: "#2300a3",
-            },
-          };
-          var razorpayObject = new Razorpay(options);
-          razorpayObject.on("payment.failed", function (response) {
-            alert("TEST");
-            alert("Payment Failed");
-            console.log("Is this hitting?????--------------->failed");
-          });
-          razorpayObject.open();
-        } else {
-          alert(res.msg);
-          console.log("Razorpay Payment is success");
-
-        }
-      },
-    });
-  }
-
-  function discard(id) {
-    console.log("Order ID is: ", id);
-    Swal.fire({
-      text: "Cancelled & coupon if used any will be reverted",
-      confirmButtonColor: "#3085d6",
-      confirmButtonText: "Ok",
-    }).then((result) => {
-      if (result.isConfirmed) {
-        fetch(`/discard_Online_Payment`, {
-          method: "post",
-          headers: {
-            "Content-Type": "application/json",
+    <script>
+      function retry_Payment(id) {
+        console.log("RAZORPAY PAYMENT INVOKED AGAIN");
+        console.log("Order ID is ", id);
+        $.ajax({
+          url: "/reRazorpay",
+          type: "POST",
+          data: { id: id },
+          success: function (res) {
+            if (res.success) {
+              var options = {
+                key: "" + res.key_id + "",
+                amount: "" + res.amount + "",
+                currency: "INR",
+                name: "getantiques",
+                order_id: "" + res.order_id + "",
+                handler: function (response) {
+                  console.log("order id is: ", id);
+                  window.open(`/orderPlaced?statuss=success`, "_self");
+                },
+                theme: {
+                  color: "#2300a3",
+                },
+              };
+              var razorpayObject = new Razorpay(options);
+              razorpayObject.on("payment.failed", function (response) {
+                alert("TEST");
+                alert("Payment Failed");
+                console.log("Is this hitting?????--------------->failed");
+              });
+              razorpayObject.open();
+            } else {
+              alert(res.msg);
+              console.log("Razorpay Payment is success");
+            }
           },
-          body: JSON.stringify({
-            id: id,
-          }),
         });
       }
-    });
-  }
-</script>
 
-</body>
-
+      function discard(id) {
+        console.log("Order ID is: ", id);
+        Swal.fire({
+          text: "Cancelled & coupon if used any will be reverted",
+          confirmButtonColor: "#3085d6",
+          confirmButtonText: "Ok",
+        }).then((result) => {
+          if (result.isConfirmed) {
+            fetch(`/discard_Online_Payment`, {
+              method: "post",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                id: id,
+              }),
+            });
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
