--- a/views/userView/userCheckOut.ejs
+++ b/views/userView/userCheckOut.ejs
@@ -138,7 +138,7 @@
                                                         <div class="form-group row">
                                                             <input class="form-control" name="phone"
                                                                 type="number" placeholder="Phone"
-                                                                id="phone" required>
+                                                                id="phone" oninput="this.value = this.value.slice(0, 10);" required>
                                                         </div>
                                                         <div class="form-group row">
                                                             <input class="form-control" onkeydown="if(arguments[0].code === 'Space' && document.getElementById('house').value.length === 0) { return false; }" name="housename"
