--- a/views/userView/userProductPage.ejs
+++ b/views/userView/userProductPage.ejs
@@ -26,9 +26,10 @@
     <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
     <link rel="stylesheet" href="/css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -55,12 +56,12 @@
           <div class="logo">
             <a href="/"><img src="/img/logo.png" alt="" /></a>
           </div>
-           <div class="header-right">
-                    <!-- <img src="img/icons/search.png" alt="" class="search-trigger">
+          <div class="header-right">
+            <!-- <img src="img/icons/search.png" alt="" class="search-trigger">
                     <img src="img/icons/man.png" alt=""> -->
             <a href="/logout" class="logoutbtn">Logout</a>
-        </div>
-        <!-- <div class="user-access">
+          </div>
+          <!-- <div class="user-access">
                    <a href="/signup">Register</a> 
                   <a href="/login" class="in">Logout</a>
               </div> -->
@@ -105,7 +106,7 @@
           background-size: 800px 800px;
           background-repeat: no-repeat;
         }
-    </style>
+      </style>
     </header>
 
     <!-- Header End -->
@@ -174,14 +175,17 @@
             <div class="product-content">
               <h2><%=productDetails.name %></h2>
               <div class="pc-meta">
-                <% if (productDetails.rate == productDetails.discountAmount) { %>
+                <% if (productDetails.rate == productDetails.discountAmount) {
+                %>
 
-                  <span class="price">₹ <%= productDetails.rate %></span>
-                  
-                  <% } else { %>
-                    <span class="price"><del>₹ <%= productDetails.rate %></del>
-                      <h5>₹ <%= productDetails.discountAmount %></h5></span>
-                    <% } %>
+                <span class="price">₹ <%= productDetails.rate %></span>
+
+                <% } else { %>
+                <span class="price"
+                  ><del>₹ <%= productDetails.rate %></del>
+                  <h5>₹ <%= productDetails.discountAmount %></h5></span
+                >
+                <% } %>
                 <!-- <div class="rating">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
@@ -200,12 +204,17 @@
                 </div>
               </div> -->
               <% if (productDetails.stock<1) { %>
-                <h5 style="color: red;">Out Of stock</h5>
-                <% } else { %>
-              <a href="/addToCart/<%=productDetails.name %>" class="primary-btn pc-btn">Add to cart</a>
+              <h5 style="color: red">Out Of stock</h5>
+              <% } else { %>
+              <a
+                href="/addToCart/<%=productDetails.name %>"
+                class="primary-btn pc-btn"
+                >Add to cart</a
+              >
               <% } %>
-              <a href="/wishlist/<%=productDetails.name %>"><img src="/img/icons/heart.png" class="p-3" alt=""></a>
-
+              <a href="/wishlist/<%=productDetails.name %>"
+                ><img src="/img/icons/heart.png" class="p-3" alt=""
+              /></a>
 
               <ul class="p-info">
                 <li>Product Information</li>
@@ -246,11 +255,13 @@
               <div class="product-text">
                 <h6><%=op.name%></h6>
                 <% if (op.offer) { %>
-                  <span class="price"><del>₹ <%= op.rate %></del>
-                    <h5>₹ <%= op.discountAmount %></h5></span>
-                  <% } else { %>
-                    <span class="price">₹ <%= op.rate %></span>
-                    <% } %>
+                <span class="price"
+                  ><del>₹ <%= op.rate %></del>
+                  <h5>₹ <%= op.discountAmount %></h5></span
+                >
+                <% } else { %>
+                <span class="price">₹ <%= op.rate %></span>
+                <% } %>
               </div>
             </div>
           </div>
@@ -380,24 +391,31 @@
           });
 
           function getCursorPos(e, img) {
-            var a, x = 0, y = 0;
+            var a,
+              x = 0,
+              y = 0;
             e = e || window.event;
             a = img.getBoundingClientRect();
             x = e.pageX - a.left;
             y = e.pageY - a.top;
             x = x - window.pageXOffset;
             y = y - window.pageYOffset;
-            return {x : x, y : y};
+            return { x: x, y: y };
           }
 
           function magnify(e, pos) {
             var x, y;
-            x = pos.x - (magnifierWidth / 2);
-            y = pos.y - (magnifierHeight / 2);
+            x = pos.x - magnifierWidth / 2;
+            y = pos.y - magnifierHeight / 2;
             magnifier.style.left = x + "px";
             magnifier.style.top = y + "px";
             magnifier.style.backgroundImage = "url('" + img.src + "')";
-            magnifier.style.backgroundPosition = "-" + (pos.x * ratio - magnifierWidth / 2) + "px -" + (pos.y * ratio - magnifierHeight / 2) + "px";
+            magnifier.style.backgroundPosition =
+              "-" +
+              (pos.x * ratio - magnifierWidth / 2) +
+              "px -" +
+              (pos.y * ratio - magnifierHeight / 2) +
+              "px";
           }
 
           img.addEventListener("mouseenter", function () {
@@ -409,7 +427,6 @@
           });
         });
       });
-  </script>
-
+    </script>
   </body>
 </html>
